objects/Expense_and_Debt__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Expenses and Debts</relationshipLabel>
        <relationshipName>Expenses_and_Debts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_Remaining_as_Debt__c</fullName>
        <description>This will be needed to be provided if revolving credit and debt consolidation is true</description>
        <label>Debt Amount Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>genesis__Applications__c</referenceTo>
        <relationshipLabel>Expenses and Debts</relationshipLabel>
        <relationshipName>Expenses_and_Debts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Are_you_Consolidating_your_Debt__c</fullName>
        <description>This is used for backend purpose only</description>
        <label>Are you Consolidating your Debt</label>
        <picklist>
            <picklistValues>
                <fullName>yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>no</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bank_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>loan__Bank_Account__c.loan__Account__r.Id</valueField>
            </filterItems>
            <infoMessage>Unexpected bank account, please confirm this is valid.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>loan__Bank_Account__c</referenceTo>
        <relationshipLabel>Expenses and Debts</relationshipLabel>
        <relationshipName>Expenses_and_Debts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consolidate_As_A_Debt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consolidate As Debt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Limit__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expense_Debt_Value__c</fullName>
        <label>Expense/Debt Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fortnightly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Revolving_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Revolving Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monthly_Debt__c</fullName>
        <formula>IF( AND(ISPICKVAL(Type__c,&apos;Debt&apos;),NOT(Consolidate_As_A_Debt__c)), IF(ISPICKVAL( Frequency__c,&apos;weekly&apos; ),Expense_Debt_Value__c *52/12, IF(ISPICKVAL(Frequency__c,&apos;fortnightly&apos;),Expense_Debt_Value__c *26/12,(IF(ISPICKVAL(Frequency__c,&apos;monthly&apos;),Expense_Debt_Value__c,(IF(ISPICKVAL(Frequency__c,&apos;yearly&apos;),Expense_Debt_Value__c/12,IF(ISPICKVAL(Frequency__c,&apos;quarterly&apos;),Expense_Debt_Value__c/3,0))))))),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Debt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Expense_Excluding_Mortgage__c</fullName>
        <formula>IF( AND(NOT(ISPICKVAL(Type__c,&apos;Debt&apos;)),NOT(ISPICKVAL(Type__c,&apos;Mortgage Expense&apos;))), IF(ISPICKVAL( Frequency__c,&apos;weekly&apos; ),Expense_Debt_Value__c *52/12, IF(ISPICKVAL(Frequency__c,&apos;fortnightly&apos;),Expense_Debt_Value__c *26/12,(IF(ISPICKVAL(Frequency__c,&apos;monthly&apos;),Expense_Debt_Value__c,(IF(ISPICKVAL(Frequency__c,&apos;yearly&apos;),Expense_Debt_Value__c/12,IF(ISPICKVAL(Frequency__c,&apos;quarterly&apos;),Expense_Debt_Value__c/3,0))))))),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Expense Excluding Mortgage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Expense__c</fullName>
        <formula>IF( AND(NOT(ISPICKVAL(Type__c,&apos;Debt&apos;))), IF(ISPICKVAL( Frequency__c,&apos;weekly&apos; ),Expense_Debt_Value__c *52/12, IF(ISPICKVAL(Frequency__c,&apos;fortnightly&apos;),Expense_Debt_Value__c *26/12 ,(IF(ISPICKVAL(Frequency__c,&apos;monthly&apos;),Expense_Debt_Value__c,(IF(ISPICKVAL(Frequency__c,&apos;yearly&apos;),Expense_Debt_Value__c/12,IF(ISPICKVAL(Frequency__c,&apos;quarterly&apos;),Expense_Debt_Value__c/3,0))))))),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgage Expense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household Expense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment and Services Expense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education Expense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle and Transport Expense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Expense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Living Expense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food and Living Expense</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Expense_Debt__c</fullName>
        <label>Type of Expense/Debt</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>Credit card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Council Rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strata</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electricity Rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water Rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas Rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gambling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total of all other monthly expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rent or mortgage repayments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilities, rates and services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &amp; contents insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other living expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other sevices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motor vehicle expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private health insurance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Expense and Debt</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>END-{0000000000}</displayFormat>
        <label>Expense and Debts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses and Debts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>